Fix CSS: Nuevos rangos en z-index tooltips 400 layers 300 modals 200

--- a/src/css/layer.css
+++ b/src/css/layer.css
@@ -2,6 +2,7 @@
 	width:280px;
 	background-image:none;
 	position:absolute;
+	z-index: 300;
 }
 
 .uiLayer .cone {
